# cerradura-nfc

./: CMakeLists.txt  Kconfig.projdefs  README.md  partitions.csv  sdkconfig.defaults  version.json
.claude/: settings.local.json
main/: CMakeLists.txt  config.h  main.c  nfc.c  nfc.h  solenoid.c  solenoid.h  storage.c  storage.h  telegram.c  telegram.h  thingsboard.c  thingsboard.h  wifi.c  wifi.h
